fix: z-index button nav

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -199,6 +199,7 @@
   position: fixed;
   left: 30px;
   bottom: 30px;
+  z-index: 999;
 }
 
 .button-descont-nav a img{
@@ -1102,6 +1103,11 @@
   .content-desconto button{
     padding: 13px 25px;
 
+  }
+
+  .button-descont-nav{
+    left: 20px;
+    bottom: 20px
   }
 
   .button-descont-nav a img{
